err/django-autocomplete-x.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_autocomplete'...
Compiling './lib/python3.5/site-packages/django_autocomplete/admin.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (admin.py, line 24)
Listing './lib/python3.5/site-packages/django_autocomplete/static'...
Listing './lib/python3.5/site-packages/django_autocomplete/static/django_autocomplete'...
Listing './lib/python3.5/site-packages/django_autocomplete/static/django_autocomplete/css'...
Listing './lib/python3.5/site-packages/django_autocomplete/static/django_autocomplete/js'...
Listing './lib/python3.5/site-packages/django_autocomplete/templates'...
Listing './lib/python3.5/site-packages/django_autocomplete/templates/django_autocomplete'...
Compiling './lib/python3.5/site-packages/django_autocomplete/views.py'...
***   File "./lib/python3.5/site-packages/django_autocomplete/views.py", line 43
    print q
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_autocomplete_x-0.0.20.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
